# ChangeLog for dev-ruby/acts_as_list
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/acts_as_list/ChangeLog,v 1.3 2013/08/22 05:53:11 graaff Exp $

*acts_as_list-0.3.0 (22 Aug 2013)

  22 Aug 2013; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.3.0.ebuild:
  Version bump.

*acts_as_list-0.2.0 (27 Apr 2013)

  27 Apr 2013; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.2.0.ebuild:
  Version bump.

  19 Dec 2012; Hans de Graaff <graaff@gentoo.org> acts_as_list-0.1.9.ebuild:
  Add x86 keyword.

*acts_as_list-0.1.9 (14 Dec 2012)

  14 Dec 2012; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.9.ebuild:
  Version bump.

  14 Dec 2012; Hans de Graaff <graaff@gentoo.org> -acts_as_list-0.1.6.ebuild,
  -acts_as_list-0.1.7.ebuild:
  Cleanup.

*acts_as_list-0.1.8 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.8.ebuild:
  Version bump.

*acts_as_list-0.1.7 (30 Jul 2012)

  30 Jul 2012; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.7.ebuild:
  Version bump.

  30 Jul 2012; Hans de Graaff <graaff@gentoo.org> -acts_as_list-0.1.4.ebuild:
  Cleanup.

  11 May 2012; Hans de Graaff <graaff@gentoo.org> acts_as_list-0.1.6.ebuild:
  Move 0.1.6 into a seperate slot since this version is only compatible with
  Rails 3, and older versions are needed for Rails 2.

*acts_as_list-0.1.6 (10 May 2012)

  10 May 2012; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.6.ebuild:
  Version bump.

*acts_as_list-0.1.5 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.5.ebuild:
  Version bump.

  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> acts_as_list-0.1.4.ebuild:
  Add ruby19 support. Drop x86 because of it.

  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> -acts_as_list-0.1.2.ebuild,
  -acts_as_list-0.1.3.ebuild:
  Remove old versions.

*acts_as_list-0.1.4 (05 Aug 2011)
