@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/acts_as_list
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/acts_as_list/ChangeLog,v 1.3 2013/08/22 05:53:11 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/acts_as_list/ChangeLog,v 1.4 2013/12/24 15:47:07 graaff Exp $
+
+  24 Dec 2013; Hans de Graaff <graaff@gentoo.org> -acts_as_list-0.1.9.ebuild,
+  -acts_as_list-0.2.0.ebuild:
+  Cleanup.
 
 *acts_as_list-0.3.0 (22 Aug 2013)
 
